# ublksrv

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.common  README  README.rst  build_with_liburing_src  cache.h  configure.ac  demo_event.c  demo_null.c  dep.h  io_uring.h  tgt_loop.c  tgt_loop.cpp  tgt_null.c  tgt_null.cpp  ubd_cmd.h  ubdsrv.c  ubdsrv.h  ubdsrv_cmd.c  ubdsrv_tgt.c  ubdsrv_tgt.h  ubdsrv_uring.c  ubdsrv_uring.h  ublk.cpp  ublk.loop.cpp  ublk.null.cpp  ublk_cmd.h  ublksrv.c  ublksrv.h  ublksrv.pc.in  ublksrv_cmd.c  ublksrv_priv.h  ublksrv_tgt.c  ublksrv_tgt.cpp  ublksrv_tgt.h  utils.c  utils.h
.github/workflows/: build.yml  ci.yml  codeql.yml
bpf/: Makefile  ublk_null.c  ublk_nvme_vfio.bpf.c
bpf/progs/: ublk_null.c
ci/: .gitignore  mkosi.build  mkosi.conf
ci/mkosi.default.d/: 10-ubdsrv.conf
ci/mkosi.default.d/fedora/: 10-fedora.conf
ci/mkosi.extra/etc/modules-load.d/: ublk-drv.conf
doc/: Doxyfile  Makefile.am  external_links.rst  mainpage.dox  ublk.1  ublk.1.xml
include/: Makefile.am  ublk_cmd.h  ublksrv.h  ublksrv_aio.h  ublksrv_priv.h  ublksrv_tgt.h  ublksrv_tgt_endian.h  ublksrv_utils.h  utils.h
lib/: Makefile  Makefile.am  ublksrv.c  ublksrv_aio.c  ublksrv_batch.c  ublksrv_cmd.c  ublksrv_json.cpp  ublksrv_main.cpp  utils.c
m4/: ac_c_compile_flags.m4
nbd/: cliserv.c  cliserv.h  nbd-client.c  nbd-debug.h  nbd.h  tgt_nbd.cpp  ublk.nbd.cpp
plugins/: Makefile.am  tgt_loop.cpp  tgt_null.cpp
plugins/nbd/: Makefile.am  README.rst  tgt_nbd.cpp
qcow2/: README.rst  STATUS.rst  lrucache.hpp  qcow2.cpp  qcow2.h  qcow2_common.h  qcow2_flush_meta.cpp  qcow2_format.h  qcow2_meta.cpp  qcow2_meta.h  qemu_dep.h  tgt_qcow2.cpp  utils.cpp
targets/: dma_buf.c  ublk.cpp  ublk.iscsi.cpp  ublk.loop.cpp  ublk.nfs.c  ublk.nfs.cpp  ublk.null.cpp  ublksrv_tgt.cpp
targets/include/: dma_buf.h  ublksrv_tgt.h  ublksrv_tgt_endian.h
targets/nbd/: cliserv.c  nbd-client.c  nbd-debug.h  nbd.h  ublk.nbd.cpp
targets/nvme/: nvme.h  ublk.nvme_vfio.cpp
targets/sheepdog/: sheep.c  sheep.h  sheepdog_proto.h  ublk.sheepdog.cpp
test/: 001  fio_common  loop_001  null_001
tests/: Makefile  Makefile.am  fio_common  loop_001  loop_002  null_001  run_test.sh  run_test_all.sh
tests/common/: fio_common  loop_common  nbd_common  qcow2_common
tests/debug/: test_dev  ublk_docker
tests/generic/: 001  002  003  004  005  006  007
tests/loop/: 001  002  003  004  005  006  007  008  009  010  012  100
tests/nbd/: 001  002  003  004  021  022  023  024  041  042  043  044  061  062
tests/null/: 001  002  003  004  005  006  007  008  012
tests/qcow2/: 001  002  021  022  023  040  041  64G_io  big_size_fs_io  big_size_io
util/: ublk_add_dev.rules  ublk_chown.sh  ublk_dev.rules  ublk_user_id.c
utils/: dump_ublk.py  genver.sh  nop.c  ublk_chown.sh  ublk_chown_docker.sh  ublk_dev.rules  ublk_user_id.c
